@@ -1,25 +1,12 @@
 #!/bin/sh
-# -Yrepl-sync
-exec java -jar ../onejar/target/jassh.jar -nocompdaemon -usejavacp -savecompiled "$0" "$@"
+exec java -jar jassh.jar -nocompdaemon -usejavacp -savecompiled "$0" "$@"
 !#
 
-import scala.actors._
-import Actor._
-
 import fr.janalyse.ssh._
-SSH.connect(host = "localhost", username = "test") { ssh =>
-  val caller = self
-  val receiver = actor {
-    loop {
-      react {
-        case e: StandardOutputMessage => println(e.line)
-        case _: StandardOutputClosed => caller ! "That's all folks"; exit
-        case _ =>
-      }
-    }
-  }
-  val executor = ssh.run("vmstat 1 10", receiver)
-  receive {case _ => }
-  executor.close
+
+SSH.once(host="localhost", username="test", password=Some("testtest"))  { ssh =>
+  val executor = ssh.run("vmstat 1 10", (l)=> l foreach {println(_)})
+  executor.waitForEnd
 }
+
 
